volnux/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DEFAULT_EXECUTOR
    GRPC_EXECUTOR
    PROCESSPOOL_EXECUTOR
    TCP_EXECUTOR
    THREADPOOL_EXECUTOR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> empty
Rule 5     statement -> variable_declaration
Rule 6     statement -> chain_declaration
Rule 7     statement -> directive
Rule 8     chain_declaration -> chain
Rule 9     conditional -> meta LPAREN branch_list RPAREN
Rule 10    branch_list -> branch
Rule 11    branch_list -> branch_list SEPARATOR branch
Rule 12    branch -> descriptor POINTER chain
Rule 13    branch -> descriptor PPOINTER chain
Rule 14    chain -> retry
Rule 15    chain -> chain POINTER retry
Rule 16    chain -> chain PPOINTER retry
Rule 17    chain -> chain PARALLEL retry
Rule 18    meta -> task
Rule 19    meta -> meta_task
Rule 20    meta -> grouped
Rule 21    meta -> conditional
Rule 22    meta -> LPAREN chain RPAREN
Rule 23    retry -> meta
Rule 24    retry -> task RETRY INT
Rule 25    task -> IDENTIFIER attribute_list
Rule 26    task -> IDENTIFIER DOUBLE_COLON IDENTIFIER attribute_list
Rule 27    attribute_list -> LBRACKET attribute_list_items RBRACKET
Rule 28    attribute_list -> empty
Rule 29    attribute_list_items -> attribute
Rule 30    attribute_list_items -> attribute_list_items SEPARATOR attribute
Rule 31    attribute -> IDENTIFIER ASSIGN expression
Rule 32    meta_task -> mode LANGLE IDENTIFIER RANGLE attribute_list
Rule 33    meta_task -> mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list
Rule 34    mode -> MAP
Rule 35    mode -> FILTER
Rule 36    mode -> REDUCE
Rule 37    mode -> FOREACH
Rule 38    mode -> FLATMAP
Rule 39    mode -> FANOUT
Rule 40    grouped -> LCURLY_BRACKET chain RCURLY_BRACKET
Rule 41    grouped -> LCURLY_BRACKET chain RCURLY_BRACKET attribute_list
Rule 42    ternary_expression -> arithmetic_expr QUESTION expression COLON expression
Rule 43    null_coalesce_expression -> expression NULLCOALESCE expression
Rule 44    directive -> VAR_DECL COLON expression
Rule 45    variable_declaration -> VAR_DECL ASSIGN expression
Rule 46    expression -> list
Rule 47    expression -> map
Rule 48    expression -> arithmetic_expr
Rule 49    expression -> null_value
Rule 50    expression -> ternary_expression
Rule 51    expression -> null_coalesce_expression
Rule 52    map -> LCURLY_BRACKET map_entries RCURLY_BRACKET
Rule 53    map_entries -> empty
Rule 54    map_entries -> map_entry
Rule 55    map_entries -> map_entries SEPARATOR map_entry
Rule 56    map_entry -> STRING_LITERAL COLON expression
Rule 57    list -> LBRACKET list_elements RBRACKET
Rule 58    list_elements -> expression
Rule 59    list_elements -> list_elements SEPARATOR expression
Rule 60    list_elements -> empty
Rule 61    empty -> <empty>
Rule 62    null_value -> NULL
Rule 63    variable_reference -> VAR_ACCESS
Rule 64    variable_reference -> VAR_ACCESS DOT IDENTIFIER
Rule 65    variable_reference -> VAR_ACCESS LBRACKET expression RBRACKET
Rule 66    descriptor -> INT
Rule 67    arithmetic_expr -> logical_or_expression
Rule 68    logical_or_expression -> logical_or_expression PARALLEL logical_and_expression
Rule 69    logical_or_expression -> logical_and_expression
Rule 70    logical_and_expression -> logical_and_expression LOGICAL_AND bitwise_or_expression
Rule 71    logical_and_expression -> bitwise_or_expression
Rule 72    bitwise_or_expression -> bitwise_or_expression BITWISE_OR bitwise_xor_expression
Rule 73    bitwise_or_expression -> bitwise_xor_expression
Rule 74    bitwise_xor_expression -> bitwise_xor_expression BITWISE_XOR bitwise_and_expression
Rule 75    bitwise_xor_expression -> bitwise_and_expression
Rule 76    bitwise_and_expression -> bitwise_and_expression BITWISE_AND arith_comparison_expression
Rule 77    bitwise_and_expression -> arith_comparison_expression
Rule 78    arith_comparison_expression -> arith_comparison_expression EQ shift_expression
Rule 79    arith_comparison_expression -> arith_comparison_expression NE shift_expression
Rule 80    arith_comparison_expression -> arith_comparison_expression LANGLE shift_expression
Rule 81    arith_comparison_expression -> arith_comparison_expression RANGLE shift_expression
Rule 82    arith_comparison_expression -> arith_comparison_expression LE shift_expression
Rule 83    arith_comparison_expression -> arith_comparison_expression GE shift_expression
Rule 84    arith_comparison_expression -> shift_expression
Rule 85    shift_expression -> shift_expression LSHL additive_expression
Rule 86    shift_expression -> shift_expression LSHR additive_expression
Rule 87    shift_expression -> shift_expression ASHR additive_expression
Rule 88    shift_expression -> additive_expression
Rule 89    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 90    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 91    additive_expression -> multiplicative_expression
Rule 92    multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 93    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 94    multiplicative_expression -> multiplicative_expression RETRY unary_expression
Rule 95    multiplicative_expression -> unary_expression
Rule 96    unary_expression -> LOGICAL_NOT unary_expression
Rule 97    unary_expression -> BITWISE_NOT unary_expression
Rule 98    unary_expression -> MINUS unary_expression
Rule 99    unary_expression -> primary_expression
Rule 100   primary_expression -> LPAREN expression RPAREN
Rule 101   primary_expression -> arithmetic_factor
Rule 102   arithmetic_factor -> INT
Rule 103   arithmetic_factor -> FLOAT
Rule 104   arithmetic_factor -> BOOLEAN
Rule 105   arithmetic_factor -> STRING_LITERAL
Rule 106   arithmetic_factor -> variable_reference

Terminals, with rules where they appear

ASHR                 : 87
ASSIGN               : 31 45
BITWISE_AND          : 76
BITWISE_NOT          : 97
BITWISE_OR           : 72
BITWISE_XOR          : 74
BOOLEAN              : 104
COLON                : 42 44 56
COMMENT              : 
DEFAULT_EXECUTOR     : 
DIV                  : 92
DOT                  : 64
DOUBLE_COLON         : 26 33
EQ                   : 78
FANOUT               : 39
FILTER               : 35
FLATMAP              : 38
FLOAT                : 103
FOREACH              : 37
GE                   : 83
GRPC_EXECUTOR        : 
IDENTIFIER           : 25 26 26 31 32 33 33 64
INT                  : 24 66 102
LANGLE               : 32 33 80
LBRACKET             : 27 57 65
LCURLY_BRACKET       : 40 41 52
LE                   : 82
LOGICAL_AND          : 70
LOGICAL_NOT          : 96
LPAREN               : 9 22 100
LSHL                 : 85
LSHR                 : 86
MAP                  : 34
MINUS                : 90 98
MOD                  : 93
NE                   : 79
NULL                 : 62
NULLCOALESCE         : 43
PARALLEL             : 17 68
PLUS                 : 89
POINTER              : 12 15
PPOINTER             : 13 16
PROCESSPOOL_EXECUTOR : 
QUESTION             : 42
RANGLE               : 32 33 81
RBRACKET             : 27 57 65
RCURLY_BRACKET       : 40 41 52
REDUCE               : 36
RETRY                : 24 94
RPAREN               : 9 22 100
SEPARATOR            : 11 30 55 59
STRING_LITERAL       : 56 105
TCP_EXECUTOR         : 
THREADPOOL_EXECUTOR  : 
VAR_ACCESS           : 63 64 65
VAR_DECL             : 44 45
error                : 

Nonterminals, with rules where they appear

additive_expression  : 85 86 87 88 89 90
arith_comparison_expression : 76 77 78 79 80 81 82 83
arithmetic_expr      : 42 48
arithmetic_factor    : 101
attribute            : 29 30
attribute_list       : 25 26 32 33 41
attribute_list_items : 27 30
bitwise_and_expression : 74 75 76
bitwise_or_expression : 70 71 72
bitwise_xor_expression : 72 73 74
branch               : 10 11
branch_list          : 9 11
chain                : 8 12 13 15 16 17 22 40 41
chain_declaration    : 6
conditional          : 21
descriptor           : 12 13
directive            : 7
empty                : 4 28 53 60
expression           : 31 42 42 43 43 44 45 56 58 59 65 100
grouped              : 20
list                 : 46
list_elements        : 57 59
logical_and_expression : 68 69 70
logical_or_expression : 67 68
map                  : 47
map_entries          : 52 55
map_entry            : 54 55
meta                 : 9 23
meta_task            : 19
mode                 : 32 33
multiplicative_expression : 89 90 91 92 93 94
null_coalesce_expression : 51
null_value           : 49
primary_expression   : 99
program              : 0
retry                : 14 15 16 17
shift_expression     : 78 79 80 81 82 83 84 85 86 87
statement            : 2 3
statement_list       : 1 3
task                 : 18 24
ternary_expression   : 50
unary_expression     : 92 93 94 95 96 97 98
variable_declaration : 5
variable_reference   : 106

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . empty
    (5) statement -> . variable_declaration
    (6) statement -> . chain_declaration
    (7) statement -> . directive
    (61) empty -> .
    (45) variable_declaration -> . VAR_DECL ASSIGN expression
    (8) chain_declaration -> . chain
    (44) directive -> . VAR_DECL COLON expression
    (14) chain -> . retry
    (15) chain -> . chain POINTER retry
    (16) chain -> . chain PPOINTER retry
    (17) chain -> . chain PARALLEL retry
    (23) retry -> . meta
    (24) retry -> . task RETRY INT
    (18) meta -> . task
    (19) meta -> . meta_task
    (20) meta -> . grouped
    (21) meta -> . conditional
    (22) meta -> . LPAREN chain RPAREN
    (25) task -> . IDENTIFIER attribute_list
    (26) task -> . IDENTIFIER DOUBLE_COLON IDENTIFIER attribute_list
    (32) meta_task -> . mode LANGLE IDENTIFIER RANGLE attribute_list
    (33) meta_task -> . mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list
    (40) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET
    (41) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET attribute_list
    (9) conditional -> . meta LPAREN branch_list RPAREN
    (34) mode -> . MAP
    (35) mode -> . FILTER
    (36) mode -> . REDUCE
    (37) mode -> . FOREACH
    (38) mode -> . FLATMAP
    (39) mode -> . FANOUT

  ! shift/reduce conflict for VAR_DECL resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for LCURLY_BRACKET resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
  ! shift/reduce conflict for FILTER resolved as shift
  ! shift/reduce conflict for REDUCE resolved as shift
  ! shift/reduce conflict for FOREACH resolved as shift
  ! shift/reduce conflict for FLATMAP resolved as shift
  ! shift/reduce conflict for FANOUT resolved as shift
    $end            reduce using rule 61 (empty -> .)
    VAR_DECL        shift and go to state 8
    LPAREN          shift and go to state 16
    IDENTIFIER      shift and go to state 17
    LCURLY_BRACKET  shift and go to state 19
    MAP             shift and go to state 20
    FILTER          shift and go to state 21
    REDUCE          shift and go to state 22
    FOREACH         shift and go to state 23
    FLATMAP         shift and go to state 24
    FANOUT          shift and go to state 25

  ! VAR_DECL        [ reduce using rule 61 (empty -> .) ]
  ! LPAREN          [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]
  ! LCURLY_BRACKET  [ reduce using rule 61 (empty -> .) ]
  ! MAP             [ reduce using rule 61 (empty -> .) ]
  ! FILTER          [ reduce using rule 61 (empty -> .) ]
  ! REDUCE          [ reduce using rule 61 (empty -> .) ]
  ! FOREACH         [ reduce using rule 61 (empty -> .) ]
  ! FLATMAP         [ reduce using rule 61 (empty -> .) ]
  ! FANOUT          [ reduce using rule 61 (empty -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    variable_declaration           shift and go to state 5
    chain_declaration              shift and go to state 6
    directive                      shift and go to state 7
    chain                          shift and go to state 9
    retry                          shift and go to state 10
    meta                           shift and go to state 11
    task                           shift and go to state 12
    meta_task                      shift and go to state 13
    grouped                        shift and go to state 14
    conditional                    shift and go to state 15
    mode                           shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement -> . variable_declaration
    (6) statement -> . chain_declaration
    (7) statement -> . directive
    (45) variable_declaration -> . VAR_DECL ASSIGN expression
    (8) chain_declaration -> . chain
    (44) directive -> . VAR_DECL COLON expression
    (14) chain -> . retry
    (15) chain -> . chain POINTER retry
    (16) chain -> . chain PPOINTER retry
    (17) chain -> . chain PARALLEL retry
    (23) retry -> . meta
    (24) retry -> . task RETRY INT
    (18) meta -> . task
    (19) meta -> . meta_task
    (20) meta -> . grouped
    (21) meta -> . conditional
    (22) meta -> . LPAREN chain RPAREN
    (25) task -> . IDENTIFIER attribute_list
    (26) task -> . IDENTIFIER DOUBLE_COLON IDENTIFIER attribute_list
    (32) meta_task -> . mode LANGLE IDENTIFIER RANGLE attribute_list
    (33) meta_task -> . mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list
    (40) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET
    (41) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET attribute_list
    (9) conditional -> . meta LPAREN branch_list RPAREN
    (34) mode -> . MAP
    (35) mode -> . FILTER
    (36) mode -> . REDUCE
    (37) mode -> . FOREACH
    (38) mode -> . FLATMAP
    (39) mode -> . FANOUT

    $end            reduce using rule 1 (program -> statement_list .)
    VAR_DECL        shift and go to state 8
    LPAREN          shift and go to state 16
    IDENTIFIER      shift and go to state 17
    LCURLY_BRACKET  shift and go to state 19
    MAP             shift and go to state 20
    FILTER          shift and go to state 21
    REDUCE          shift and go to state 22
    FOREACH         shift and go to state 23
    FLATMAP         shift and go to state 24
    FANOUT          shift and go to state 25

    statement                      shift and go to state 26
    variable_declaration           shift and go to state 5
    chain_declaration              shift and go to state 6
    directive                      shift and go to state 7
    chain                          shift and go to state 9
    retry                          shift and go to state 10
    meta                           shift and go to state 11
    task                           shift and go to state 12
    meta_task                      shift and go to state 13
    grouped                        shift and go to state 14
    conditional                    shift and go to state 15
    mode                           shift and go to state 18

state 3

    (2) statement_list -> statement .

    VAR_DECL        reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    LCURLY_BRACKET  reduce using rule 2 (statement_list -> statement .)
    MAP             reduce using rule 2 (statement_list -> statement .)
    FILTER          reduce using rule 2 (statement_list -> statement .)
    REDUCE          reduce using rule 2 (statement_list -> statement .)
    FOREACH         reduce using rule 2 (statement_list -> statement .)
    FLATMAP         reduce using rule 2 (statement_list -> statement .)
    FANOUT          reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement_list -> empty .

    VAR_DECL        reduce using rule 4 (statement_list -> empty .)
    LPAREN          reduce using rule 4 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 4 (statement_list -> empty .)
    LCURLY_BRACKET  reduce using rule 4 (statement_list -> empty .)
    MAP             reduce using rule 4 (statement_list -> empty .)
    FILTER          reduce using rule 4 (statement_list -> empty .)
    REDUCE          reduce using rule 4 (statement_list -> empty .)
    FOREACH         reduce using rule 4 (statement_list -> empty .)
    FLATMAP         reduce using rule 4 (statement_list -> empty .)
    FANOUT          reduce using rule 4 (statement_list -> empty .)
    $end            reduce using rule 4 (statement_list -> empty .)


state 5

    (5) statement -> variable_declaration .

    VAR_DECL        reduce using rule 5 (statement -> variable_declaration .)
    LPAREN          reduce using rule 5 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> variable_declaration .)
    LCURLY_BRACKET  reduce using rule 5 (statement -> variable_declaration .)
    MAP             reduce using rule 5 (statement -> variable_declaration .)
    FILTER          reduce using rule 5 (statement -> variable_declaration .)
    REDUCE          reduce using rule 5 (statement -> variable_declaration .)
    FOREACH         reduce using rule 5 (statement -> variable_declaration .)
    FLATMAP         reduce using rule 5 (statement -> variable_declaration .)
    FANOUT          reduce using rule 5 (statement -> variable_declaration .)
    $end            reduce using rule 5 (statement -> variable_declaration .)


state 6

    (6) statement -> chain_declaration .

    VAR_DECL        reduce using rule 6 (statement -> chain_declaration .)
    LPAREN          reduce using rule 6 (statement -> chain_declaration .)
    IDENTIFIER      reduce using rule 6 (statement -> chain_declaration .)
    LCURLY_BRACKET  reduce using rule 6 (statement -> chain_declaration .)
    MAP             reduce using rule 6 (statement -> chain_declaration .)
    FILTER          reduce using rule 6 (statement -> chain_declaration .)
    REDUCE          reduce using rule 6 (statement -> chain_declaration .)
    FOREACH         reduce using rule 6 (statement -> chain_declaration .)
    FLATMAP         reduce using rule 6 (statement -> chain_declaration .)
    FANOUT          reduce using rule 6 (statement -> chain_declaration .)
    $end            reduce using rule 6 (statement -> chain_declaration .)


state 7

    (7) statement -> directive .

    VAR_DECL        reduce using rule 7 (statement -> directive .)
    LPAREN          reduce using rule 7 (statement -> directive .)
    IDENTIFIER      reduce using rule 7 (statement -> directive .)
    LCURLY_BRACKET  reduce using rule 7 (statement -> directive .)
    MAP             reduce using rule 7 (statement -> directive .)
    FILTER          reduce using rule 7 (statement -> directive .)
    REDUCE          reduce using rule 7 (statement -> directive .)
    FOREACH         reduce using rule 7 (statement -> directive .)
    FLATMAP         reduce using rule 7 (statement -> directive .)
    FANOUT          reduce using rule 7 (statement -> directive .)
    $end            reduce using rule 7 (statement -> directive .)


state 8

    (45) variable_declaration -> VAR_DECL . ASSIGN expression
    (44) directive -> VAR_DECL . COLON expression

    ASSIGN          shift and go to state 27
    COLON           shift and go to state 28


state 9

    (8) chain_declaration -> chain .
    (15) chain -> chain . POINTER retry
    (16) chain -> chain . PPOINTER retry
    (17) chain -> chain . PARALLEL retry

    VAR_DECL        reduce using rule 8 (chain_declaration -> chain .)
    LPAREN          reduce using rule 8 (chain_declaration -> chain .)
    IDENTIFIER      reduce using rule 8 (chain_declaration -> chain .)
    LCURLY_BRACKET  reduce using rule 8 (chain_declaration -> chain .)
    MAP             reduce using rule 8 (chain_declaration -> chain .)
    FILTER          reduce using rule 8 (chain_declaration -> chain .)
    REDUCE          reduce using rule 8 (chain_declaration -> chain .)
    FOREACH         reduce using rule 8 (chain_declaration -> chain .)
    FLATMAP         reduce using rule 8 (chain_declaration -> chain .)
    FANOUT          reduce using rule 8 (chain_declaration -> chain .)
    $end            reduce using rule 8 (chain_declaration -> chain .)
    POINTER         shift and go to state 29
    PPOINTER        shift and go to state 30
    PARALLEL        shift and go to state 31


state 10

    (14) chain -> retry .

    POINTER         reduce using rule 14 (chain -> retry .)
    PPOINTER        reduce using rule 14 (chain -> retry .)
    PARALLEL        reduce using rule 14 (chain -> retry .)
    VAR_DECL        reduce using rule 14 (chain -> retry .)
    LPAREN          reduce using rule 14 (chain -> retry .)
    IDENTIFIER      reduce using rule 14 (chain -> retry .)
    LCURLY_BRACKET  reduce using rule 14 (chain -> retry .)
    MAP             reduce using rule 14 (chain -> retry .)
    FILTER          reduce using rule 14 (chain -> retry .)
    REDUCE          reduce using rule 14 (chain -> retry .)
    FOREACH         reduce using rule 14 (chain -> retry .)
    FLATMAP         reduce using rule 14 (chain -> retry .)
    FANOUT          reduce using rule 14 (chain -> retry .)
    $end            reduce using rule 14 (chain -> retry .)
    RPAREN          reduce using rule 14 (chain -> retry .)
    RCURLY_BRACKET  reduce using rule 14 (chain -> retry .)
    SEPARATOR       reduce using rule 14 (chain -> retry .)


state 11

    (23) retry -> meta .
    (9) conditional -> meta . LPAREN branch_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    POINTER         reduce using rule 23 (retry -> meta .)
    PPOINTER        reduce using rule 23 (retry -> meta .)
    PARALLEL        reduce using rule 23 (retry -> meta .)
    VAR_DECL        reduce using rule 23 (retry -> meta .)
    IDENTIFIER      reduce using rule 23 (retry -> meta .)
    LCURLY_BRACKET  reduce using rule 23 (retry -> meta .)
    MAP             reduce using rule 23 (retry -> meta .)
    FILTER          reduce using rule 23 (retry -> meta .)
    REDUCE          reduce using rule 23 (retry -> meta .)
    FOREACH         reduce using rule 23 (retry -> meta .)
    FLATMAP         reduce using rule 23 (retry -> meta .)
    FANOUT          reduce using rule 23 (retry -> meta .)
    $end            reduce using rule 23 (retry -> meta .)
    RPAREN          reduce using rule 23 (retry -> meta .)
    RCURLY_BRACKET  reduce using rule 23 (retry -> meta .)
    SEPARATOR       reduce using rule 23 (retry -> meta .)
    LPAREN          shift and go to state 32

  ! LPAREN          [ reduce using rule 23 (retry -> meta .) ]


state 12

    (24) retry -> task . RETRY INT
    (18) meta -> task .

    RETRY           shift and go to state 33
    LPAREN          reduce using rule 18 (meta -> task .)
    POINTER         reduce using rule 18 (meta -> task .)
    PPOINTER        reduce using rule 18 (meta -> task .)
    PARALLEL        reduce using rule 18 (meta -> task .)
    VAR_DECL        reduce using rule 18 (meta -> task .)
    IDENTIFIER      reduce using rule 18 (meta -> task .)
    LCURLY_BRACKET  reduce using rule 18 (meta -> task .)
    MAP             reduce using rule 18 (meta -> task .)
    FILTER          reduce using rule 18 (meta -> task .)
    REDUCE          reduce using rule 18 (meta -> task .)
    FOREACH         reduce using rule 18 (meta -> task .)
    FLATMAP         reduce using rule 18 (meta -> task .)
    FANOUT          reduce using rule 18 (meta -> task .)
    $end            reduce using rule 18 (meta -> task .)
    RPAREN          reduce using rule 18 (meta -> task .)
    RCURLY_BRACKET  reduce using rule 18 (meta -> task .)
    SEPARATOR       reduce using rule 18 (meta -> task .)


state 13

    (19) meta -> meta_task .

    LPAREN          reduce using rule 19 (meta -> meta_task .)
    POINTER         reduce using rule 19 (meta -> meta_task .)
    PPOINTER        reduce using rule 19 (meta -> meta_task .)
    PARALLEL        reduce using rule 19 (meta -> meta_task .)
    VAR_DECL        reduce using rule 19 (meta -> meta_task .)
    IDENTIFIER      reduce using rule 19 (meta -> meta_task .)
    LCURLY_BRACKET  reduce using rule 19 (meta -> meta_task .)
    MAP             reduce using rule 19 (meta -> meta_task .)
    FILTER          reduce using rule 19 (meta -> meta_task .)
    REDUCE          reduce using rule 19 (meta -> meta_task .)
    FOREACH         reduce using rule 19 (meta -> meta_task .)
    FLATMAP         reduce using rule 19 (meta -> meta_task .)
    FANOUT          reduce using rule 19 (meta -> meta_task .)
    $end            reduce using rule 19 (meta -> meta_task .)
    RPAREN          reduce using rule 19 (meta -> meta_task .)
    RCURLY_BRACKET  reduce using rule 19 (meta -> meta_task .)
    SEPARATOR       reduce using rule 19 (meta -> meta_task .)


state 14

    (20) meta -> grouped .

    LPAREN          reduce using rule 20 (meta -> grouped .)
    POINTER         reduce using rule 20 (meta -> grouped .)
    PPOINTER        reduce using rule 20 (meta -> grouped .)
    PARALLEL        reduce using rule 20 (meta -> grouped .)
    VAR_DECL        reduce using rule 20 (meta -> grouped .)
    IDENTIFIER      reduce using rule 20 (meta -> grouped .)
    LCURLY_BRACKET  reduce using rule 20 (meta -> grouped .)
    MAP             reduce using rule 20 (meta -> grouped .)
    FILTER          reduce using rule 20 (meta -> grouped .)
    REDUCE          reduce using rule 20 (meta -> grouped .)
    FOREACH         reduce using rule 20 (meta -> grouped .)
    FLATMAP         reduce using rule 20 (meta -> grouped .)
    FANOUT          reduce using rule 20 (meta -> grouped .)
    $end            reduce using rule 20 (meta -> grouped .)
    RPAREN          reduce using rule 20 (meta -> grouped .)
    RCURLY_BRACKET  reduce using rule 20 (meta -> grouped .)
    SEPARATOR       reduce using rule 20 (meta -> grouped .)


state 15

    (21) meta -> conditional .

    LPAREN          reduce using rule 21 (meta -> conditional .)
    POINTER         reduce using rule 21 (meta -> conditional .)
    PPOINTER        reduce using rule 21 (meta -> conditional .)
    PARALLEL        reduce using rule 21 (meta -> conditional .)
    VAR_DECL        reduce using rule 21 (meta -> conditional .)
    IDENTIFIER      reduce using rule 21 (meta -> conditional .)
    LCURLY_BRACKET  reduce using rule 21 (meta -> conditional .)
    MAP             reduce using rule 21 (meta -> conditional .)
    FILTER          reduce using rule 21 (meta -> conditional .)
    REDUCE          reduce using rule 21 (meta -> conditional .)
    FOREACH         reduce using rule 21 (meta -> conditional .)
    FLATMAP         reduce using rule 21 (meta -> conditional .)
    FANOUT          reduce using rule 21 (meta -> conditional .)
    $end            reduce using rule 21 (meta -> conditional .)
    RPAREN          reduce using rule 21 (meta -> conditional .)
    RCURLY_BRACKET  reduce using rule 21 (meta -> conditional .)
    SEPARATOR       reduce using rule 21 (meta -> conditional .)


state 16

    (22) meta -> LPAREN . chain RPAREN
    (14) chain -> . retry
    (15) chain -> . chain POINTER retry
    (16) chain -> . chain PPOINTER retry
    (17) chain -> . chain PARALLEL retry
    (23) retry -> . meta
    (24) retry -> . task RETRY INT
    (18) meta -> . task
    (19) meta -> . meta_task
    (20) meta -> . grouped
    (21) meta -> . conditional
    (22) meta -> . LPAREN chain RPAREN
    (25) task -> . IDENTIFIER attribute_list
    (26) task -> . IDENTIFIER DOUBLE_COLON IDENTIFIER attribute_list
    (32) meta_task -> . mode LANGLE IDENTIFIER RANGLE attribute_list
    (33) meta_task -> . mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list
    (40) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET
    (41) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET attribute_list
    (9) conditional -> . meta LPAREN branch_list RPAREN
    (34) mode -> . MAP
    (35) mode -> . FILTER
    (36) mode -> . REDUCE
    (37) mode -> . FOREACH
    (38) mode -> . FLATMAP
    (39) mode -> . FANOUT

    LPAREN          shift and go to state 16
    IDENTIFIER      shift and go to state 17
    LCURLY_BRACKET  shift and go to state 19
    MAP             shift and go to state 20
    FILTER          shift and go to state 21
    REDUCE          shift and go to state 22
    FOREACH         shift and go to state 23
    FLATMAP         shift and go to state 24
    FANOUT          shift and go to state 25

    chain                          shift and go to state 34
    retry                          shift and go to state 10
    meta                           shift and go to state 11
    task                           shift and go to state 12
    meta_task                      shift and go to state 13
    grouped                        shift and go to state 14
    conditional                    shift and go to state 15
    mode                           shift and go to state 18

state 17

    (25) task -> IDENTIFIER . attribute_list
    (26) task -> IDENTIFIER . DOUBLE_COLON IDENTIFIER attribute_list
    (27) attribute_list -> . LBRACKET attribute_list_items RBRACKET
    (28) attribute_list -> . empty
    (61) empty -> .

    DOUBLE_COLON    shift and go to state 36
    LBRACKET        shift and go to state 37
    RETRY           reduce using rule 61 (empty -> .)
    LPAREN          reduce using rule 61 (empty -> .)
    POINTER         reduce using rule 61 (empty -> .)
    PPOINTER        reduce using rule 61 (empty -> .)
    PARALLEL        reduce using rule 61 (empty -> .)
    VAR_DECL        reduce using rule 61 (empty -> .)
    IDENTIFIER      reduce using rule 61 (empty -> .)
    LCURLY_BRACKET  reduce using rule 61 (empty -> .)
    MAP             reduce using rule 61 (empty -> .)
    FILTER          reduce using rule 61 (empty -> .)
    REDUCE          reduce using rule 61 (empty -> .)
    FOREACH         reduce using rule 61 (empty -> .)
    FLATMAP         reduce using rule 61 (empty -> .)
    FANOUT          reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    RPAREN          reduce using rule 61 (empty -> .)
    RCURLY_BRACKET  reduce using rule 61 (empty -> .)
    SEPARATOR       reduce using rule 61 (empty -> .)

    attribute_list                 shift and go to state 35
    empty                          shift and go to state 38

state 18

    (32) meta_task -> mode . LANGLE IDENTIFIER RANGLE attribute_list
    (33) meta_task -> mode . LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list

    LANGLE          shift and go to state 39


state 19

    (40) grouped -> LCURLY_BRACKET . chain RCURLY_BRACKET
    (41) grouped -> LCURLY_BRACKET . chain RCURLY_BRACKET attribute_list
    (14) chain -> . retry
    (15) chain -> . chain POINTER retry
    (16) chain -> . chain PPOINTER retry
    (17) chain -> . chain PARALLEL retry
    (23) retry -> . meta
    (24) retry -> . task RETRY INT
    (18) meta -> . task
    (19) meta -> . meta_task
    (20) meta -> . grouped
    (21) meta -> . conditional
    (22) meta -> . LPAREN chain RPAREN
    (25) task -> . IDENTIFIER attribute_list
    (26) task -> . IDENTIFIER DOUBLE_COLON IDENTIFIER attribute_list
    (32) meta_task -> . mode LANGLE IDENTIFIER RANGLE attribute_list
    (33) meta_task -> . mode LANGLE IDENTIFIER DOUBLE_COLON IDENTIFIER RANGLE attribute_list
    (40) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET
    (41) grouped -> . LCURLY_BRACKET chain RCURLY_BRACKET attribute_list
    (9) conditional -> . meta LPAREN branch_list RPAREN
    (34) mode -> . MAP
    (35) mode -> . FILTER
    (36) mode -> . REDUCE
    (37) mode -> . FOREACH
    (38) mode -> . FLATMAP
    (39) mode -> . FANOUT

    LPAREN          shift and go to state 16
    IDENTIFIER      shift and go to state 17
    LCURLY_BRACKET  shift and go to state 19
    MAP             shift and go to state 20
    FILTER          shift and go to state 21
    REDUCE          shift and go to state 22
    FOREACH         shift and go to state 23
    FLATMAP         shift and go to state 24
    FANOUT          shift and go to state 25

    chain                          shift and go to state 40
    retry                          shift and go to state 10
    meta                           shift and go to state 11
    task                           shift and go to state 12
    meta_task                      shift and go to state 13
    grouped                        shift and go to state 14
    conditional                    shift and go to state 15
    mode                           shift and go to state 18

state 20

    (34) mode -> MAP .

    LANGLE          reduce using rule 34 (mode -> MAP .)


state 21

    (35) mode -> FILTER .

    LANGLE          reduce using rule 35 (mode -> FILTER .)


state 22

    (36) mode -> REDUCE .

    LANGLE          reduce using rule 36 (mode -> REDUCE .)


state 23

    (37) mode -> FOREACH .

    LANGLE          reduce using rule 37 (mode -> FOREACH .)


state 24

    (38) mode -> FLATMAP .

    LANGLE          reduce using rule 38 (mode -> FLATMAP .)


state 25

    (39) mode -> FANOUT .

    LANGLE          reduce using rule 39 (mode -> FANOUT .)


state 26

    (3) statement_list -> statement_list statement .
